--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>React App</title>
 </head>
 
-<body>
+<body style="background-color: rgb(246, 246, 246)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 </body>
